# promptlab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_eval.yaml  json_eval.yaml  model_compare.yaml
src/promptlab/: __init__.py  cli.py  config.py  exceptions.py  models.py  runner.py
src/promptlab/evaluators/: __init__.py  base.py  contains.py  cost.py  exact.py  json_valid.py  llm_judge.py  regex.py  registry.py  similarity.py
src/promptlab/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  registry.py
src/promptlab/reporters/: __init__.py  console.py  csv_reporter.py  json_reporter.py
tests/: conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_models.py  test_runner.py
tests/test_evaluators/: test_evaluators.py
tests/test_providers/: test_providers.py
tests/test_reporters/: test_reporters.py
