[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptlab"
version = "0.1.0"
description = "A lightweight, YAML-driven LLM evaluation toolkit for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "junjunup", email = "junjunup@users.noreply.github.com" },
]
keywords = [
    "llm",
    "evaluation",
    "prompt",
    "testing",
    "ai",
    "openai",
    "anthropic",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = ["ollama>=0.3"]
semantic = ["sentence-transformers>=3.0"]
web = ["gradio>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
all = ["promptlab[openai,anthropic,ollama,semantic,web]"]

[project.urls]
Homepage = "https://github.com/junjunup/promptlab"
Documentation = "https://github.com/junjunup/promptlab#readme"
Repository = "https://github.com/junjunup/promptlab"
Issues = "https://github.com/junjunup/promptlab/issues"
Changelog = "https://github.com/junjunup/promptlab/blob/main/CHANGELOG.md"

[project.scripts]
promptlab = "promptlab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/promptlab"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["promptlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/promptlab"]

[tool.coverage.report]
show_missing = true
skip_empty = true
